# CPP2023-4-Calculator

./: .gitignore  CMakeLists.txt
Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  DllReader.cpp  DllReader.h  Loader.cpp  Loader.h  Parser.cpp  Parser.h  Solver.cpp  Solver.h  main.cpp
Calculator/Logics/: Flipper.cpp  Flipper.h  Loader.cpp  Loader.h  Parser.cpp  Parser.h  Solver.cpp  Solver.h  Validator.cpp  Validator.h
Calculator/Operators/: Operator.h  StandardOps.cpp  StandardOps.h
Calculator/plugins/: CMakeLists.txt  Cos.cpp  Factorial.cpp  Fxyz.cpp  Mod.cpp  Not.cpp  NumberE.cpp  NumberPi.cpp  Pow.cpp  Sin.cpp
